Wrote more logic -- tried to use  my fork of printpdf, but explicit destination link still not working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.38"
 owned_ttf_parser = "0.24.0"
-printpdf = "0.7.0"
+#printpdf = "0.7.0"
+printpdf = { git = "https://github.com/chipsenkbeil/printpdf.git" }
