--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ clap = { version = "4.5.17", features = ["derive"] }
 chrono = "0.4.38"
 opener = "0.7.2"
 owned_ttf_parser = "0.24.0"
+palette = "0.7.6"
 mlua = { version = "0.9.9", features = ["luau", "macros"] }
 phf = { version = "0.11.2", features = ["macros"] }
 #printpdf = "0.7.0"
