--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ chrono = "0.4.38"
 opener = "0.7.2"
 owned_ttf_parser = "0.24.0"
 palette = "0.7.6"
-mlua = { version = "0.9.9", features = ["luau", "macros"] }
+mlua = { version = "0.9.9", features = ["luau", "macros", "unstable"] }
 phf = { version = "0.11.2", features = ["macros"] }
 #printpdf = "0.7.0"
 printpdf = { git = "https://github.com/chipsenkbeil/printpdf.git" }
