Big refactor into EnginePages, EnginePage, and other data structures

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,4 +28,5 @@ mlua = { version = "0.9.9", features = ["luau", "macros", "unstable"] }
 phf = { version = "0.11.2", features = ["macros"] }
 #printpdf = "0.7.0"
 printpdf = { git = "https://github.com/chipsenkbeil/printpdf.git" }
+rand = "0.8.5"
 tailcall = "1.0.1"
