Add windows release target
Summary:

Test Plan:

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -33,6 +33,8 @@ jobs:
             os: ubuntu-latest
           - target: x86_64-apple-darwin
             os: macos-latest
+          - target: x86_64-pc-windows-msvc
+            os: windows-latest
           # Universal macOS binary is supported as universal-apple-darwin.
           - target: universal-apple-darwin
             os: macos-latest
