Update releases workflow to include change, readme, and licenses
Summary:

Test Plan:

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -51,6 +51,9 @@ jobs:
           # (required) Comma-separated list of binary names (non-extension portion of filename) to build and upload.
           # Note that glob pattern is not supported yet.
           bin: makepdf
+          # (optional) Comma-separated list of additional files to be included to archive.
+          # Note that glob pattern is not supported yet.
+          include: CHANGELOG.md,LICENSE-APACHE,LICENSE-MIT,README.md
           # (optional) Target triple, default is host triple.
           target: ${{ matrix.target }}
           # (required) GitHub token for uploading assets to GitHub Releases.
